--- a/Leaky.analysis.flow.Rmd
+++ b/Leaky.analysis.flow.Rmd
@@ -210,7 +210,7 @@ We are using the EpiModel framework, http://www.epimodel.org/, with help from Sa
 
 Note that this code chunk includes the model initiation piece, in which among other things we initialize the overall population size and the size of any sub-populations defined by exposure risk. 
 
-First pass at the size of these risk subpopulations are 10% high risk, 80% medium risk, and 10% no (zero) risk. (This parameterization is tough:  Dimitrov et al 2015 even suggest that the MAJORITY of individuals in trials are NOT exposed; https://pubmed.ncbi.nlm.nih.gov/25569838/)
+First pass at the size of these risk subpopulations are 10% high risk, 60% medium risk, and 30% no (zero) risk. (This parameterization is difficult:  Dimitrov et al 2015 even suggest that the MAJORITY of individuals in trials are NOT exposed; https://pubmed.ncbi.nlm.nih.gov/25569838/)
   
 ```{r EpiModel}
 
@@ -218,11 +218,11 @@ param <- param.dcm(lambda = lambda, epsilon = epsilon, risk = risk)
 init <- init.dcm(Sp = 10000, Ip = 0,
                  Sv = 10000, Iv = 0,
                  Sph = 1000, Iph = 0,    #placebo, high risk
-                 Spm = 7000, Ipm = 0,    #placebo, medium risk
-                 Spl = 2500, Ipl = 0,    #placebo, low risk
+                 Spm = 6000, Ipm = 0,    #placebo, medium risk
+                 Spl = 3000, Ipl = 0,    #placebo, low risk
                  Svh = 1000, Ivh = 0,    #vaccine, high risk
-                 Svm = 7000, Ivm = 0,    #vaccine, medium risk
-                 Svl = 2500, Ivl = 0,    #vaccine, low risk
+                 Svm = 6000, Ivm = 0,    #vaccine, medium risk
+                 Svl = 3000, Ivl = 0,    #vaccine, low risk
                  SIp.flow = 0, SIv.flow = 0, 
                  SIph.flow = 0, SIpm.flow = 0, SIpl.flow = 0,
                  SIvh.flow = 0, SIvm.flow = 0, SIvl.flow = 0)
